# Molecular

./: .gitignore  .gitmodules  .graphifyignore  CMakeLists.txt  README.md  mkdocs.yml
Molecular/: CMakeLists.txt
Molecular/src/: Molecular.h  molpch.cpp  molpch.h
Molecular/src/Molecular/: App.cpp  App.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Molecular/src/Molecular/3DPhysics/: Object.h
Molecular/src/Molecular/Core/: App.cpp  App.h  Assets.cpp  Assets.h  Core.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Timestep.h  Window.h
Molecular/src/Molecular/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Molecular/src/Molecular/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Molecular/src/Molecular/Physics/: Atom.cpp  Atom.h  AtomData.h  Atoms.h  BoundingBox.h  ForceCalculator.cpp  ForceCalculator.h  Integrator.cpp  Integrator.h  Molecule.cpp  Molecule.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsWorld.cpp  PhysicsWorld.h  SimulationSpace.cpp  SimulationSpace.h
Molecular/src/Molecular/Physics3D/: ForceCalculator.cpp  ForceCalculator.h  ForceCalculator3D.cpp  ForceCalculator3D.h  Integrator.cpp  Integrator.h  ParticleTypeData.h  PhysicsObject.cpp  PhysicsObject.h  SubatomicParticle.cpp  SubatomicParticle.h
Molecular/src/Molecular/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Molecular/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  my_imgui_impl_opengl3.cpp
Molecular/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: Box.glsl  FlatColor.glsl  Sphere.glsl  Texture.glsl
Sandbox/src/: Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h  Sandbox3D.cpp  Sandbox3D.h
aditional_resurce/: CMakeLists.txt
docs/: 01-architecture.md  01-architecture.ro.md  02-engine.md  02-engine.ro.md  03-physics-2d.md  03-physics-2d.ro.md  04-physics-3d.md  04-physics-3d.ro.md  05-building-and-running.md  05-building-and-running.ro.md  06-status-and-roadmap.md  06-status-and-roadmap.ro.md  IDEAS.md  LEARNING_LOG.md  README.md  README.ro.md
docs/learning/: index.md  index.ro.md  progress.md  progress.ro.md
docs/learning/exercises/: 001-doctest-target.md  001-doctest-target.ro.md  002-asset-path-helper.md  002-asset-path-helper.ro.md  003-imgui-build-fix.md  003-imgui-build-fix.ro.md  004-physics3d-wiring.md  004-physics3d-wiring.ro.md
docs/learning/graphics/: cmake-targets-and-propagation.md  cmake-targets-and-propagation.ro.md
docs/learning/physics/: lennard-jones.md  lennard-jones.ro.md
tests/: CMakeLists.txt  assets_path_tests.cpp  main.cpp  physics3d_tests.cpp  sanity_tests.cpp
